--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,44 +9,9 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
+<body>
+  
+   {{{body}}}
 
-  <div class="wrapper">
-    <header>
-        <h1 class="has-text-black px-3 py-3 has-text-weight-bold">Tech Blog</h1>
-        <nav class="navbar mt-2">
-            {{#if loggedIn}}
-            <a href="/" class="navbar-item is-hoverable pt-1">home</a>
-            <a href="/dashboard" class="navbar-item is-hoverable pt-1">dashboard</a>
-            <a href="/dashboard/create/" class="navbar-item is-hoverable pt-1 mr-4">create post</a>
-            <button id="logout" class="button is-danger">logout</button>
-            {{else}}
-            <a href="/" class="navbar-item is-hoverable pt-1">home</a>
-            <a href="/login" class="button is-primary">login</a>
-            {{/if}}
-        </nav>
-    </header>
-
-    <main>
-            {{{ body }}}
-    </main>
-
-    <footer class="footer rows pb-2">
-        <div class="row-is-full content has-text-centered">
-            <p>
-            <a href="/">homepage</a>{{#if loggedIn}} | 
-            <a href="/dashboard/">dashboard</a> | 
-            <a href="/dashboard/create/">create new post</a>
-            {{else}}
-             | <a href="/login/">login</a>
-            {{/if}}
-            </p>
-        </div>
-    </footer>
-  </div>
-
-{{#if loggedIn}}
-<script src="/javascript/logout.js"></script>
-{{/if}}
-</body>
-
-</html>
+  </body>
+  </html>
